# daykeeper-mcp

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  plan.md  pyproject.toml
scripts/: check_coverage.py  e2e_client.py  make_icon.py  sync_public_days.py
src/daykeeper/: __init__.py  dates.py  server.py  service.py
src/daykeeper/data/: gifts.json  messages.json  public_days.json  public_enrichment.json  special_days.json
tests/: test_service.py  test_sync.py
