[project]
name = "daykeeper-mcp"
version = "0.1.0"
description = "DayKeeper(데이키퍼) - special-day care MCP server: fun anniversaries, gift ideas, and message drafts"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.10",
    "uvicorn>=0.30",
    "tzdata>=2024.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/daykeeper"]

[tool.pytest.ini_options]
testpaths = ["tests"]
